--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,13 +77,6 @@ p {
   background-color: #2589bd;
 }
 
-.benefit-cost,
-.benefit-brand,
-.benefit-lead {
-  margin-bottom: 32px;
-  color: #ffffff;
-}
-
 .benefit-cost h3,
 .benefit-brand h3,
 .benefit-lead h3 {
@@ -99,12 +92,19 @@ p {
   max-width: 150px;
 }
 
+.benefit-cost,
+.benefit-brand,
+.benefit-lead {
+  margin-bottom: 32px;
+  color: #ffffff;
+}
+
 .social-media-marketing,
 .online-reputation-management,
 .search-engine-optimization {
   margin-bottom: 20px;
-  padding: 50px;
-  height: auto;
+  padding: 20px;
+  height: 240px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   background-color: #0072bb;
   color: #ffffff;
@@ -114,6 +114,7 @@ p {
 .online-reputation-management img,
 .search-engine-optimization img {
   max-height: 200px;
+  padding: 20px;
 }
 
 .online-reputation-management h2,
